# Tesla-Stock-Price-Prediction-Using-LSTM

./: README.md  TESLA_test_2024.csv  tesla-stock-price-preditiction-using-lstm.ipynb
tesla_stock_app/: app.py  config.pkl  lstm_model.h5  pyproject.toml  requirements.txt  scaler.pkl
